@@ -170,7 +170,7 @@ static GameDefs g = {
 	0,	// LIMITED_MAGES_PER_BUILDING
 	GameDefs::REPORT_NOTHING, // TRANSIT_REPORT
 	0,  // MARKETS_SHOW_ADVANCED_ITEMS
-	0,	// USE_PREPARE_COMMAND
+	GameDefs::PREPARE_NONE,	// USE_PREPARE_COMMAND
 	15,	// MONSTER_ADVANCE_MIN_PERCENT
 	0,	// MONSTER_ADVANCE_HOSTILE_PERCENT
 	1,	// HAVE_EMAIL_SPECIAL_COMMANDS
